# -Type-radiant-protocol

./: .env  .env.example  .gitignore  App.tsx  ArchitectFee.sol  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMERGENCY.md  Index.html  Index.js  LICENSE  LICENSE_RADIANT.md  LICENSE_RADIANT_COMMERCIAL.md  Main.rs  OWNER.md  README.md  RELEASE.md  Radiant (1).sol  RadiantDemo.html  RadiantDiscovery.ts  RadiantIdentity.sol  RadiantPresence.html  RadiantPresenceUI.tsx  RadiantSDK.ts  RadiantShares.sol  RadiantSocial.html  RadiantTransaction.html  Registry.sol  Relayer  SECURITY.md  THREAT_MODEL.md  TUTORIAL.md  Type README.md.  Websocket  Worker  adaptive_falsification_engine.py  alpha_beta_stability_theorem.tex  app.py  (+59 more)
(backend/: Dockerfile)
.github/: CODEOWNERS
ai/: .audit.py  audit.py  train_slm.py
ai/ai/: .feedback.py  slm_api.py
backend/: package.json  settler.ts  test_api.sh
backend/backend/: index.ts
backend/backend/backend/: settler.ts
components/: RadiantUI.tsx
contracts/: ArchitectFeeV2.sol  CISVerificationLayer.sol  PrivateOptOut.sol  RadiantComputeRegistry.sol  RadiantToken.sol  RadiantValueToken.sol  TimeLockedSecret.sol  TransparencyLog.sol  VerificationLayer.sol
data/: high_cis_conversations.jsonl
docs/: STOCHASTIC_STABILITY_THEORY_FINAL.md  UNIVERSAL_MASTER_FORMULA.md
docs/genesis/: onboarding.md
frontend/: App.tsx  Dockerfile  Index.tsx  MessageInput.tsx  build  contractInterop.ts  index.html  package.json
frontend/frontend/: index.html
frontend/frontend/frontend/: app.js
frontend/src/components/: SilenceExplanation.jsx
ignition/: RadiantDeploy.ts
ignition/modules/: RadiantModule.js  Registry.ts
scripts/: install.sh
test/: radiant-emergency.js
worker/: Cargo.toml
worker/src/: main.rs
