[package]
name = "radiant-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
nova = { git = "https://github.com/microsoft/Nova", features = ["parallel"] }
ff = "0.13"
bellperson = "0.24"
rand = "0.8"
lazy_static = "1.4"
reqwest = "0.11"
