[package]
name = "radiant-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kafka messaging
rdkafka = { version = "0.36", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Nova ZK proofs (pinned commit for reproducibility)
nova = { git = "https://github.com/microsoft/Nova", rev = "4c1a3f2", features = ["parallel"] }

# Randomness
rand = "0.8"

# HTTP client for WebSocket heartbeat
reqwest = "0.11"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Lazy static for optional global state
lazy_static = "1.4"

# The following are transitively included by `nova`, but kept explicitly for clarity
# (they are not needed to be listed here, but harmless if present)
# ff = "0.13"
# bellperson = "0.24"
