[package]
name = "radiant-worker"
version = "0.1.0"
edition = "2021"
authors = ["Radiant Protocol Contributors"]
description = "Nova folding worker for the Radiant Protocol – recursively aggregates ZK proofs via Kafka"
license = "MIT"
repository = "https://github.com/1me0/Type-radiant-protocol"
readme = "README.md"

[dependencies]
# Kafka messaging (async)
rdkafka = { version = "0.36", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Nova ZK proofs – pinned for reproducibility
nova = { git = "https://github.com/microsoft/Nova", rev = "4c1a3f2", features = ["parallel"] }

# Randomness (required by Nova)
rand = "0.8"

# HTTP client for WebSocket heartbeat
reqwest = "0.11"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Lazy static for optional global state
lazy_static = "1.4"

# Note: `ff` and `bellperson` are transitively included by `nova` – no need to list them here.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
